# xi-events-py

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: batch_test_dataset.py  generate_opcodes.py
tests/: test_horatius.py
xi_events/: __init__.py  analyze.py  cfg.py  cli.py  custom_parsers.py  dataset.py  decompile.py  disasm.py  emit.py  opcodes.py  opcodes_auto.py  opcodes_meta.json  registry.py  structure.py  work_area.py
